Menu nav agregado

--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
 </head>
 
 <body>
+  <header class="header">
+      <h1 class="header__logo">VCK</h1>
+      <nav class="header__nav">
+      <a href="https://obiwan.netflix.com/" class="header__link">Obiwan</a>
+      <a href="https://netflix.teleopticloud.com/Web/Authentication" class="header__link">Calabrio</a>
+      <a href="https://2mares.grupokonecta.corp/CMI360/Pages/LoginCentratel.aspx" class="header__link">2 Mares</a>
+      <a href="https://streamu.netflix.net" class="header__link">Stream University</a>
+    </nav>
+    </header>
   <main class="container">
-
     <div id="time" class="clock">
       <div id="hour" class="clock__item">00</div>
       <div id="minutes" class="clock__item">00</div>
