--- a/index.html
+++ b/index.html
@@ -35,7 +35,41 @@
     </div>
 
     <div class="registro" id="registro"></div>
-
+<!------------------ CONTADORES - CRONÓMETRO ------------------>
+    <div class="card">
+      <div class="temporizador">
+        <div class="dot"></div>
+        <svg>
+          <circle cx="70" cy="70" r="70"></circle>
+          <circle cx="70" cy="70" r="70"></circle>
+        </svg>
+        <div class="numero">
+          <div>
+            <h2>
+              <span>0</span>
+              <span>1</span>
+              <span>2</span>
+              <span>3</span>
+              <span>4</span>
+              <span>5</span>
+            </h2>
+            <h2>
+              <span>0</span>
+              <span>1</span>
+              <span>2</span>
+              <span>3</span>
+              <span>4</span>
+              <span>5</span>
+              <span>6</span>
+              <span>7</span>
+              <span>8</span>
+              <span>9</span>
+            </h2>
+          </div>
+          <p>Segundos</p>
+        </div>
+      </div>
+    </div>
   </main>
   <script src="app.js"></script>
 </body>
