Se cambió a color rojo de momento

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <a href="https://netflix.teleopticloud.com/Web/Authentication" target="_blank" class="header__link">Calabrio</a>
       <a href="https://2mares.grupokonecta.corp/CMI360/Pages/LoginCentratel.aspx" target="_blank" class="header__link">2 Mares</a>
       <a href="https://streamu.netflix.net" target="_blank" class="header__link">Stream University</a>
-      <span class="material-symbols-outlined" id="themeSwitcher">invert_colors</span>
+      <button class="material-symbols-outlined" id="themeSwitcher">invert_colors</button>
     </nav>
   </header>
   <main class="container">
