Add description meta

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Una herramienta simple para gestionar tus horarios de break y lunch. Mantente al día con tu tiempo de descanso.">
   <title>VCK</title>
   <link rel="icon" href="./img/faviKVC.png" type="image/png">
   <link rel="stylesheet" href="style.css">
