V1 btn editar horario design

--- a/index.html
+++ b/index.html
@@ -57,7 +57,13 @@
 
     <!-- NUEVA SECCIÓN DE ALARMA AÑADIDA -->
     <div class="alarm">
-      <button class="alarm__btn" id="abrirModal">Editar horario</button>
+      <button class="alarm__btn" id="abrirModal">
+        Editar horario
+        <span class="alarm__btn--top"></span>
+        <span class="alarm__btn--right"></span>
+        <span class="alarm__btn--bottom"></span>
+        <span class="alarm__btn--left"></span>
+      </button>
       <section class="alarm__section">
         <div class="alarm__item">
           <p class="alarm__description">Primer Break:</p>
