--- a/index.html
+++ b/index.html
@@ -58,11 +58,7 @@
     <!-- NUEVA SECCIÓN DE ALARMA AÑADIDA -->
     <div class="alarm">
       <button class="alarm__btn" id="abrirModal">
-        Editar horario
-        <span class="alarm__btn--top"></span>
-        <span class="alarm__btn--right"></span>
-        <span class="alarm__btn--bottom"></span>
-        <span class="alarm__btn--left"></span>
+        Editar Horario
       </button>
       <section class="alarm__section">
         <div class="alarm__item">
@@ -126,6 +122,8 @@
     <p class="alert__msj--default"> Por favor márcalo en el Obiwan.</p>
     <button id="alertaAceptarBtn">Aceptar</button>
   </dialog>
+
+  
 
   <script src="app.js"></script>
 </body>
