Editando el msj de alerta

--- a/index.html
+++ b/index.html
@@ -119,11 +119,9 @@
 
   <dialog class="alert" id="alertaModal">
     <p class="alert__msj" id="alertaMensaje"></p>
-    <p class="alert__msj--default"> Por favor márcalo en el Obiwan.</p>
+    <p class="alert__msj--default"> Por favor márcalo en el Sprinklr.</p>
     <button id="alertaAceptarBtn">Aceptar</button>
   </dialog>
-
-  
 
   <script src="app.js"></script>
 </body>
