--- a/index.html
+++ b/index.html
@@ -123,6 +123,19 @@
     <button id="alertaAceptarBtn">Aceptar</button>
   </dialog>
 
+  <!-- SECCION NOTAS -->
+  <section class="editable">
+    <article class="bloc">
+      <h3 class="bloc__title">Bloc de notas:</h3>
+      <textarea class="bloc__text" id="notasTextarea" placeholder="Escribe tus notas aquí..."></textarea>
+    </article>
+
+    <article class="kbs">
+      <h3 class="kbs__title">Mis KB's:</h3>
+    </article> 
+    
+  </section>  
+
   <script src="app.js"></script>
 </body>
 
