Eliminando la seccion de marcar breaks y lunchs

--- a/index.html
+++ b/index.html
@@ -48,14 +48,8 @@
       <div id="ampm" class="clock__item">AM</div>
     </div>
 
-    <div class="actions">
-      <button id="btnBreak" class="actions__btn" data-type="Break" data-text-start="Marcar Break"
-        data-text-end="Regresar Break">Marcar Break</button>
-      <button id="btnLunch" class="actions__btn" data-type="Lunch" data-text-start="Marcar Lunch"
-        data-text-end="Regresar Lunch">Marcar Lunch</button>
-    </div>
+    <!-- Nueva sección de Temporizador -->
 
-    <div class="registro" id="registro"></div>
 
     <!-- NUEVA SECCIÓN DE ALARMA AÑADIDA -->
     <div class="alarm">
