--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Una herramienta simple para gestionar tus horarios de break y lunch. Mantente al día con tu tiempo de descanso.">
+  <meta name="description"
+    content="Una herramienta simple para gestionar tus horarios de break y lunch. Mantente al día con tu tiempo de descanso.">
   <title>VCK</title>
   <link rel="icon" href="./img/faviKVC.png" type="image/png">
   <link rel="stylesheet" href="style.css">
@@ -12,32 +13,34 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Saira:wght@500;600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
-   <header class="header">
-      <!-- LOGOTIPO -->
-      <h1 class="header__logo">VCK</h1>
+  <header class="header">
+    <!-- LOGOTIPO -->
+    <h1 class="header__logo">VCK</h1>
 
-      <!-- TOGGLE -->
-      <button class="header__btn">
-        <svg class="menu-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z"/></svg>
-      </button>
+    <!-- TOGGLE -->
+    <button class="header__btn">
+      <svg class="menu-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+        <path
+          d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z" />
+      </svg>
+    </button>
 
-      <!-- NAVEGATION -->
-      <nav class="header__nav" id="mainMenu">
-        <a href="https://netflixcare.sprinklr.com/" target="_blank" class="header__link">Sprinklr</a>
-        <a href="https://csmemberadmin.prod.netflix.net/" target="_blank" class="header__link">CSMA</a>
-        <a href="https://netflix.teleopticloud.com/Web/Authentication" target="_blank" class="header__link">Calabrio</a>
-        <a href="https://2mares.grupokonecta.corp/CMI360/Pages/LoginCentratel.aspx" target="_blank"
-          class="header__link">2 Mares</a>
-        <a href="https://streamu.netflix.net" target="_blank" class="header__link">Stream University</a>
-        <a href="#" class="header__link">Herramientas</a>
+    <!-- NAVEGATION -->
+    <nav class="header__nav" id="mainMenu">
+      <a href="https://netflixcare.sprinklr.com/" target="_blank" class="header__link">Sprinklr</a>
+      <a href="https://csmemberadmin.prod.netflix.net/" target="_blank" class="header__link">CSMA</a>
+      <a href="https://netflix.teleopticloud.com/Web/Authentication" target="_blank" class="header__link">Calabrio</a>
+      <a href="https://2mares.grupokonecta.corp/CMI360/Pages/LoginCentratel.aspx" target="_blank" class="header__link">2
+        Mares</a>
+      <a href="https://streamu.netflix.net" target="_blank" class="header__link">Stream University</a>
+      <a href="#" class="header__link">Herramientas</a>
 
-        <button class="material-symbols-outlined" id="themeSwitcher">invert_colors</button>
-      </nav>
+      <button class="material-symbols-outlined" id="themeSwitcher">invert_colors</button>
+    </nav>
   </header>
 
   <main class="container">
@@ -47,9 +50,6 @@
       <div id="seconds" class="clock__item">00</div>
       <div id="ampm" class="clock__item">AM</div>
     </div>
-
-    <!-- Nueva sección de Temporizador -->
-
 
     <!-- NUEVA SECCIÓN DE ALARMA AÑADIDA -->
     <div class="alarm">
@@ -72,23 +72,34 @@
       </section>
     </div>
 
-  </main>
-  <!--------TEMPORIZADOR - CRONÓMETRO ----------->
+  <!-- </main> -->
+  <!-- Nueva sección de Temporizador -->
   <section class="temporizador">
+    <div class="temporizador__intro">
+      <h2 class="temporizador__titulo">Temporizador:</h2>
+      <p class="temporizador__detalle">Selecciona el tiempo y dale a play</p>
+    </div>
     <div class="contenedor-util">
       <ul class="temporizador__opciones">
-        <li class="temporizador__opcion temporizador__opcion--seleccionado" id="opcion1m">1 Minuto</li>
-        <li class="temporizador__opcion" id="opcion3m">3 Minutos</li>
+        <li class="temporizador__opcion temporizador__opcion--seleccionado" data-duration="60">1 Minuto</li>
+        <li class="temporizador__opcion" data-duration="180">3 Minutos</li>
+        <li class="temporizador__opcion" data-duration="599">Descanso</li>
       </ul>
-
       <div class="temporizador__tiempo">
-        <div class="temporizador__pantalla" id="tiempoDisplay">01:00</div>
-        <span class="temporizador__control material-symbols-outlined" id="play">play_circle</span>
-        <span class="temporizador__control material-symbols-outlined" id="stop">stop_circle</span>
+        <div id="dot" class="dot"></div>
+        <svg>
+          <circle cx="65" cy="65" r="60"></circle>
+          <circle id="progressCircle" cx="65" cy="65" r="60"></circle>
+        </svg>
+        <div class="numero">
+          <div class="temporizador__pantalla" id="tiempoDisplay">01:00</div>
+          <span class="temporizador__control material-symbols-outlined mt-8" id="play">play_circle</span>
+          <span class="temporizador__control material-symbols-outlined mt-8" id="stop">stop_circle</span>
+        </div>
       </div>
-    </div> <!-- FIN DE CONTENEDOR UTIL-->
+    </div>
   </section>
-
+</main>
   <!-- Elemento de audio para la alarma -->
   <audio id="alarmSound" src="./sounds/Sound1.mp3" preload="auto"></audio>
 
@@ -123,7 +134,8 @@
   <section class="editable">
     <article class="bloc">
       <h3 class="bloc__title">Bloc de notas:</h3>
-      <textarea class="bloc__text" id="notasTextarea" placeholder="Escribe tus notas aquí..." spellcheck="false"></textarea>
+      <textarea class="bloc__text" id="notasTextarea" placeholder="Escribe tus notas aquí..."
+        spellcheck="false"></textarea>
     </article>
 
     <article class="kbs">
@@ -143,7 +155,7 @@
       <div class="kbs__list-container">
         <h4 class="kbs__list-title">Mis KBs Favoritos</h4>
         <ul id="kb-list" class="kbs__list">
-        <!-- KB items will be injected here by JavaScript -->
+          <!-- KB items will be injected here by JavaScript -->
           <!-- <li class="kbs__item">
             <div class="kbs__info">
               <span class="kbs__number">42</span>
@@ -158,10 +170,10 @@
 
         </ul>
       </div>
-      
-    </article> 
-    
-  </section>  
+
+    </article>
+
+  </section>
 
   <script src="app.js"></script>
 </body>
