add count letters for gift card

--- a/index.html
+++ b/index.html
@@ -149,25 +149,14 @@
 
         <div class="kbs__fpart2">
           <input type="text" class="kbs__input" id="kbInput-des" placeholder="Descripción" required>
+          <span class="kbs__span" id="kbs-span"></span>
         </div>
       </div>
 
       <div class="kbs__list-container">
         <h4 class="kbs__list-title">Mis KBs Favoritos</h4>
         <ul id="kb-list" class="kbs__list">
-          <!-- KB items will be injected here by JavaScript -->
-          <!-- <li class="kbs__item">
-            <div class="kbs__info">
-              <span class="kbs__number">42</span>
-              <span class="kb-description">Actividad inusual y Cargo no reconocido</span>
-            </div>
-            <div class="kbs__actions">
-              <button class="kb-action-btn copy-btn" data-id="${kb.id}" data-description="${kb.description}">Copy</button>
-              <button class="kb-action-btn edit-btn" data-id="${kb.id}">Edit</button>
-              <button class="kb-action-btn delete-btn" data-id="${kb.id}">Delete</button>
-            </div>
-          </li> -->
-
+          <!-- Los KBs se agregarán aquí dinámicamente -->
         </ul>
       </div>
 
